k8s/02-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  namespace: it6g
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: broker
          image: confluentinc/cp-kafka:6.1.0
          ports:
            - containerPort: 9092
            - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: it6g
spec:
  type: NodePort
  selector:
    app: broker
  ports:
    - name: external
      port: 9092
      targetPort: 9092
      nodePort: 30092
    - name: internal
      port: 29092
      targetPort: 29092
