k8s/03-schema-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      volumes:
        - name: config
          configMap:
            name: schema-registry-config
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:6.1.0
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: config
              mountPath: /etc/schema-registry/schema-registry.properties
              subPath: schema-registry.properties
          command:
            - /usr/bin/schema-registry-start
            - /etc/schema-registry/schema-registry.properties
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: it6g
spec:
  selector:
    app: schema-registry
  ports:
    - port: 8081
      targetPort: 8081
