k8s/04-kafka-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  namespace: it6g
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      volumes:
        - name: connectors
          emptyDir: {}
      containers:
        - name: kafka-connect
          image: confluentinc/cp-kafka-connect:6.1.0
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: connectors
              mountPath: /connectors
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
  namespace: it6g
spec:
  selector:
    app: kafka-connect
  ports:
    - port: 8083
      targetPort: 8083
