k8s/05-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ter-zookeeper
  namespace: it6g
spec:
  type: ClusterIP
  selector:
    app: ter-zookeeper
  ports:
    - port: 2181
      targetPort: 2181
      name: client
---
apiVersion: v1
kind: Service
metadata:
  name: ter-kafka
  namespace: it6g
spec:
  type: ClusterIP
  selector:
    app: ter-kafka
  ports:
    - port: 9092
      targetPort: 9092
      name: external
    - port: 29092
      targetPort: 29092
      name: internal
---
apiVersion: v1
kind: Service
metadata:
  name: ter-kafka-external
  namespace: it6g
spec:
  type: NodePort
  selector:
    app: ter-kafka
  ports:
    - port: 9092
      targetPort: 9092
      nodePort: 30092
      name: external
---
apiVersion: v1
kind: Service
metadata:
  name: ter-schema-registry
  namespace: it6g
spec:
  type: ClusterIP
  selector:
    app: ter-schema-registry
  ports:
    - port: 8081
      targetPort: 8081
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ter-kafka-connect
  namespace: it6g
spec:
  type: ClusterIP
  selector:
    app: ter-kafka-connect
  ports:
    - port: 8083
      targetPort: 8083
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ter-ksqldb
  namespace: it6g
spec:
  type: ClusterIP
  selector:
    app: ter-ksqldb
  ports:
    - port: 8088
      targetPort: 8088
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ter-postgres
  namespace: it6g
spec:
  type: ClusterIP
  selector:
    app: ter-postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: tcp-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: ter-postgrest
  namespace: it6g
spec:
  type: ClusterIP
  selector:
    app: ter-postgrest
  ports:
    - port: 3000
      targetPort: 3000
      name: http
