k8s/06-postgrest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  namespace: it6g
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
        - name: postgrest
          image: postgrest/postgrest:v12.2.3
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: it6g
spec:
  type: NodePort
  selector:
    app: postgrest
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30003
