k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ter-ingress
  namespace: it6g
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: ter.k8s.itrust6g.pdmfc.com
      http:
        paths:
          - path: /schema-registry
            pathType: Prefix
            backend:
              service:
                name: ter-schema-registry
                port:
                  number: 8081
          - path: /kafka-connect
            pathType: Prefix
            backend:
              service:
                name: ter-kafka-connect
                port:
                  number: 8083
          - path: /ksqldb
            pathType: Prefix
            backend:
              service:
                name: ter-ksqldb
                port:
                  number: 8088
          - path: /postgrest
            pathType: Prefix
            backend:
              service:
                name: ter-postgrest
                port:
                  number: 3000
